fix wrong color of .SkillPhy

--- a/css/fakemons.css
+++ b/css/fakemons.css
@@ -162,16 +162,16 @@ td {
 }
 
 .skillPhy {
-    background-color: #5070a8;
-    color: #c0d8f8;
+    background-color: #F05030;
+    color: #F8C030;
 }
 
 .skillSpe {
-    background-color: #5070a8;
-    color: #c0d8f8;
+    background-color: #5070A8;
+    color: #C0D8F8;
 }
 
 .skillShi {
-    background-color: #a8a090;
-    color: #f8f8f8;
+    background-color: #A8A090;
+    color: #F8F8F8;
 }
